tests/miniJava/neg/006372_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while ( 0 ) public int [] java ( ) { return 0 ; } { } } }
